v0.15.0/_sources/index.rst.txt
:notoc:

.. module:: phenotypic

PhenoTypic
==========

.. container:: subtitle

   A modular framework for bioimage analysis and visualization


Welcome to PhenoTypic's documentation. Whether you're detecting colonies for the
first time or building custom analysis pipelines, these guides will help you get
started.


.. grid:: 1 2 3 3
   :gutter: 4
   :padding: 2 2 0 0
   :class-container: sd-text-center

   .. grid-item-card::  Tutorials
      :img-top: ./_static/assets/200x150/user_guide_book.svg
      :class-card: intro-card
      :shadow: md

      Step-by-step lessons that take you from loading your first plate image
      to building complete analysis pipelines. Start here if you're new.

      +++

      .. button-ref:: tutorials/index
         :ref-type: doc
         :click-parent:
         :color: secondary
         :expand:

         Start learning

   .. grid-item-card:: How-To Guides
      :img-top: ./_static/assets/200x150/examples.svg
      :class-card: intro-card
      :shadow: md

      Task-oriented recipes for specific problems: correcting images, choosing
      detectors, measuring colonies, running batch jobs, and more.

      +++

      .. button-ref:: how_to/index
         :ref-type: doc
         :click-parent:
         :color: secondary
         :expand:

         Find a recipe

   .. grid-item-card::  Explanation
      :img-top: ./_static/assets/200x150/dev_guide.svg
      :class-card: intro-card
      :shadow: md

      Conceptual guides that explain how and why things work: color spaces,
      detection strategies, measurement metrics, and the pipeline model.

      +++

      .. button-ref:: explanation/index
         :ref-type: doc
         :click-parent:
         :color: secondary
         :expand:

         Understand the concepts

   .. grid-item-card::  Extending
      :img-top: ./_static/assets/200x150/downloads.svg
      :class-card: intro-card
      :shadow: md

      Build your own operations, detectors, and dashboards on top of
      PhenoTypic's modular architecture.

      +++

      .. button-ref:: extending/index
         :ref-type: doc
         :click-parent:
         :color: secondary
         :expand:

         Start extending

   .. grid-item-card::  API Reference
      :img-top: ./_static/assets/200x150/api_ref_sign.svg
      :class-card: intro-card
      :shadow: md

      Detailed reference for every public class, function, and parameter.
      Includes CLI reference, configuration, and glossary.

      +++

      .. button-ref:: api_reference/index
         :ref-type: doc
         :click-parent:
         :color: secondary
         :expand:

         To the API reference

   .. grid-item-card::  Report a Problem
      :img-top: ./_static/assets/200x150/contact_us.svg
      :class-card: intro-card
      :shadow: md
      :link: https://github.com/exfab/PhenoTypic/issues
      :link-type: url

      Notice a problem or need help? Open an issue on GitHub and add a label
      so we can help you faster.

      +++

      .. button-link:: https://github.com/exfab/PhenoTypic/issues
         :click-parent:
         :color: secondary
         :expand:

         Report an issue


.. toctree::
   :maxdepth: 3
   :caption: Documentation
   :hidden:
   :titlesonly:

   tutorials/index
   how_to/index
   explanation/index
   extending/index
   api_reference/index
   contrib_guide/index
   downloads
